--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -55,12 +55,12 @@
     margin: 25px 0;
     font-size: 0.9em;
     font-family: sans-serif;
-    min-width: 400px;
+    min-width: 350px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
 .styled-table thead tr {
-    background-color: #009879;
+    background-color: #ff6100;
     color: #ffffff;
     text-align: left;
 }
@@ -77,7 +77,7 @@
 }
 
 .styled-table tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
+    border-bottom: 2px solid #ff6100;
 }
 
 
