--- a/_includes/head.html
+++ b/_includes/head.html
@@ -51,3 +51,7 @@
 {% unless background contains 'http://' or background contains 'https://' %}{% capture background %}{{ site.url }}/images/{{ background }}{% endcapture %}{% endunless %}
 <style type="text/css">body {background-image:url({{ background }});}</style>
 {% endif %}
+
+{% if site.google_analytics %}
+{% include analytics.html %}
+{% endif %}
