Replace imgur play icon with Google Fonts Icon

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,6 +38,7 @@
 <!-- Webfonts -->
 <link href="//fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 <meta http-equiv="cleartype" content="on">
 
